index.html modified

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset ="UTF-8">
-		<title> My Firsttt Page </title>
+		<title> My Firsdsttt Page </title>
 	</head>
 
 	<body>
